# syntx

./: .gitignore  GEMINI.md  GETTING_STARTED.md  Makefile  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  benchmark_results.json  evaluation_paper.html  grid_search.py  print_losses.py  pyproject.toml  requirements.txt  run_mindboggle_experiment.py  scratch_debug.py  scratch_transform.py  test_affine.py  test_reg_speed.py
.agents/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
benchmarks/: benchmark_deep_metrics.py
docs/: 3d_registration_gap_analysis.md  api.html  benchmarks.html  deep_feature_impact_report.html  experiments.html  index.html  metric_comparison_report.html  mindboggle_evaluation_reference.md  optimizer_and_deep_feature_report.html  parity_report.html  parity_report_2d.html  registration_report.html  style.css
examples/: benchmark_gpu_performance.py  benchmark_suite.py  compare_metrics.py  compare_metrics_tutorial.py  compare_registration_backends_3d.py  debug.py  debug_2d.py  debug_3d_affine.py  debug_3d_affine_sweep.py  debug_3d_affine_targeted.py  evaluate_all_metrics.py  evaluate_feature_metrics.py  evaluate_metrics_generative.py  generate_ants_2d_comparison_report.py  generate_ants_3d_comparison_report.py  generate_vgg_deep_dive_report.py  gpu_benchmark_results.json  pairs.csv  run_benchmarks.py  run_comprehensive_benchmarks.py  run_optimizer_sweeps.py  verify_fixes.py  vgg_deep_dive.py  vgg_sweep_2d.py  vgg_sweep_3d.py
scratch/: check_deformation_magnitude.py  check_displacement_norm.py  check_init_phys.py  (+256 more)
(+339 files in other folders)
